インストール・アンインストールを検知してリスト更新

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,14 +15,25 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.fnobi.appbenri.MainActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name="com.fnobi.appbenri.PackageActionReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
